First workshop starting point

--- a/browser/index.html
+++ b/browser/index.html
@@ -1,5 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head></head>
-    <body></body>
+<head>
+	<title>Juke</title>
+	<link href="/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+	<link href="/bootstrap-dark.css" rel="stylesheet" />
+	<link href="/style.css" rel="stylesheet" />
+</head>
+<body ng-app="juke">
+	<div id="main" class="container-fluid">
+
+		<div class="col-xs-2">
+			<sidebar>
+				<section>
+					<h5 class="playlist-item active">
+						<a>ALBUMS</a>
+					</h5>
+				</section>
+			</sidebar>
+		</div>
+
+		<div class="col-xs-10"></div>
+
+		<footer></footer>
+
+	</div>
+</body>
 </html>
