Get rid of ng-app

--- a/browser/index.html
+++ b/browser/index.html
@@ -6,7 +6,7 @@
 	<link href="/bootstrap-dark.css" rel="stylesheet" />
 	<link href="/style.css" rel="stylesheet" />
 </head>
-<body ng-app="juke">
+<body>
 	<div id="main" class="container-fluid">
 
 		<div class="col-xs-2">
