--- a/browser/index.html
+++ b/browser/index.html
@@ -12,9 +12,9 @@
 		<div class="col-xs-2">
 			<sidebar>
 				<section>
-					<h5 class="playlist-item active">
-						<a>ALBUMS</a>
-					</h5>
+					<h4 class="playlist-item active">
+						<a href="#">ALBUMS</a>
+					</h4>
 				</section>
 			</sidebar>
 		</div>
