added logo to boilerplate

--- a/browser/index.html
+++ b/browser/index.html
@@ -11,6 +11,7 @@
 
 		<div class="col-xs-2">
 			<sidebar>
+        <img src="juke.svg" class="logo">
 				<section>
 					<h4 class="playlist-item active">
 						<a href="#">ALBUMS</a>
