--- a/browser/index.html
+++ b/browser/index.html
@@ -13,7 +13,7 @@
         <sidebar>
           <img src="juke.svg" class="logo">
           <section>
-            <h4 class="playlist-item active">
+            <h4 class="menu-item active">
               <a href="#">ALBUMS</a>
             </h4>
           </section>
